# deskd

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: design.md  roadmap.md  security.md
scripts/: session_hook.py
scripts/cron/: wake_orchestrator.sh
skills/agent-orchestration/: KNOWLEDGE.md  SKILL.md
skills/agent-orchestration/references/: BOSS_IDENTITY.md  EVOLUTION_PROTOCOL.md  MEETING_PROTOCOL.md  PLAYBOOK_PATTERN.md  SESSION_LIFECYCLE.md  SUPERVISOR_IDENTITY.md  WAKE_ORCHESTRATION.md
skills/agent-orchestration/scripts/: knowledge_txn.py
src/deskd/: __init__.py  __main__.py  auth.py  channels.py  cli.py  config.py  mailbox.py  meetings.py  orchestration.py
src/deskd/orchestration/: __init__.py  board.py  delivery.py  hooks.py  inbox.py  presence.py  store.py  tasks.py  wake.py
src/deskd/web/: __init__.py  app.py
src/deskd/web/static/: agent.html  board.html  meetings.html
tests/: conftest.py  test_authority.py  test_channels.py  test_config_seams.py  test_delivery.py  test_hooks.py  test_inbox.py  test_mailbox.py  test_meetings.py  test_outage_recovery.py  test_presence.py  test_security.py  test_wake.py
